# morton-nd

./: .gitignore  .travis.yml  CMakeLists.txt  NOTICE  README.md  main.cpp  mortoncode.h
.github/workflows/: cmake.yml
MetaMorton/: CMakeLists.txt  array_builder.h  main.cpp  mortoncode.h
MetaMorton.xcodeproj/: project.pbxproj
MetaMorton.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
MetaMorton.xcodeproj/xcuserdata/kevin.xcuserdatad/xcschemes/: MetaMorton.xcscheme  xcschememanagement.plist
cmake/: morton-nd-config.cmake.in
docs/: MortonND_BMI2.md  MortonND_LUT.md
include/morton-nd/: mortonND_BMI2.h  mortonND_LUT.h  mortonND_LUT_decoder.h  mortonND_LUT_encoder.h
morton-nd/include/: mortonND_BMI2.h  mortonND_BMI2_encoder.h  mortonND_LUT_encoder.h  mortonND_encoder.h  mortoncode.h
test/: CMakeLists.txt  main.cpp  mortonND_BMI2_test.cpp  mortonND_BMI2_test.h  mortonND_LUT_decoder_test.cpp  mortonND_LUT_decoder_test.h  mortonND_LUT_encoder_test.cpp  mortonND_LUT_encoder_test.h  mortonND_LUT_test.cpp  mortonND_LUT_test.h  mortonND_test.h  mortonND_test_common.h  mortonND_test_control.h  mortonND_test_util.h  variadic_placeholder.h
